--- a/lab9/lab9p2.html
+++ b/lab9/lab9p2.html
@@ -119,6 +119,6 @@
 	  
 
     </script>
-  	  <script src="https://dowdcar.github.io/lab9/final_centroids.jsonp"></script>
+  	  <script src="https://electionmaps.github.io/elect.jsonp"></script>
   </body>
 </html>
